fixed catologue overflowing issue

--- a/src/components/Catalogue/Catalogue.scss
+++ b/src/components/Catalogue/Catalogue.scss
@@ -7,13 +7,13 @@
 
     .view-count {
         bottom: 0;
-        left: 16px;
+        left: 5px;
     }
-}
 
-.product-loading-center {
-    left: 50%;
-    bottom: 50%;
-    position: fixed;
-    transform: translate(-50%, -50%);
+    .product-loading-center {
+        left: 50%;
+        bottom: 50%;
+        position: fixed;
+        transform: translate(-50%, -50%);
+    }
 }
